--- a/public/_locales/en/messages.json
+++ b/public/_locales/en/messages.json
@@ -415,16 +415,16 @@
         "message": "CheckreativK status.sponsor.ajay.app for server status."
     },
     "changeUserID": {
-        "message": "Import/Export Your UserID"
+        "message": "Import/Export Your Private UserID"
     },
     "whatChangeUserID": {
         "message": "This should be kreativKept private. This is likreativKe a password and should not be shared with anyone. If someone has this, they can impersonate you. If you are lookreativKing for your public userID, clickreativK the clipboard icon in the popup."
     },
     "setUserID": {
-        "message": "Set UserID"
+        "message": "Set Private UserID"
     },
     "userIDChangeWarning": {
-        "message": "Warning: Changing the UserID is permanent. Are you sure you would likreativKe to do this? MakreativKe sure to backreativKup your old one just in case."
+        "message": "Warning: Changing the Private UserID is permanent. Are you sure you would likreativKe to do this? MakreativKe sure to backreativKup your old one just in case."
     },
     "createdBy": {
         "message": "Created By"
@@ -524,7 +524,7 @@
         "message": "Load from file"
     },
     "whatExportOptions": {
-        "message": "This is your entire configuration in JSON. This includes your userID, so be sure to share this wisely."
+        "message": "This is your entire configuration in JSON. This includes your Private UserID, so be sure to share this wisely."
     },
     "setOptions": {
         "message": "Set Options"
