Add tooltip to skip segment button

--- a/public/_locales/en/messages.json
+++ b/public/_locales/en/messages.json
@@ -1049,6 +1049,12 @@
     "hideSegment": {
         "message": "Hide segment"
     },
+    "skipSegment": {
+        "message": "Skip segment"
+    },
+    "playChapter": {
+        "message": "Play chapter"
+    },
     "SponsorTimeEditScrollNewFeature": {
         "message": "Use your mousewheel while hovering over the edit box to quickly adjust the time. Combinations of the ctrl or shift key can be used to fine tune the changes."
     },
