--- a/public/_locales/sv/messages.json
+++ b/public/_locales/sv/messages.json
@@ -415,16 +415,16 @@
         "message": "Gå till status.sponsor.ajay.app för serverstatus."
     },
     "changeUserID": {
-        "message": "Importera/Exportera ditt Användar-ID"
+        "message": "Importera/Exportera ditt privata Användar-ID"
     },
     "whatChangeUserID": {
         "message": "Detta skreativKa hållas privat. Detta är som ett lösenord och skreativKa inte delas med någon. Om andra får tag i det kreativKan de utge sig för att vara dig. Om du letar efter ditt offentliga Användar-ID kreativKan du kreativKlickreativKa på urkreativKlippsikreativKonen i popupen."
     },
     "setUserID": {
-        "message": "Ange Användar-ID"
+        "message": "Ange privat Användar-ID"
     },
     "userIDChangeWarning": {
-        "message": "Varning: Ändring av Användar-ID är permanent. Är du säkreativKer att du vill göra detta? Se till att ta en säkreativKerhetskreativKopia av ditt gamla för säkreativKerhets skreativKull."
+        "message": "Varning: Ändring av ditt Användar-ID är permanent. Är du säkreativKer att du vill göra detta? Se till att ta en säkreativKerhetskreativKopia av ditt gamla för säkreativKerhets skreativKull."
     },
     "createdBy": {
         "message": "SkreativKapad av"
@@ -524,7 +524,7 @@
         "message": "Ladda från fil"
     },
     "whatExportOptions": {
-        "message": "Detta är alla dina alternativ i JSON-format. Det inkreativKluderar ditt Användar-ID, så var noga med hur du hanterar informationen."
+        "message": "Detta är hela din kreativKonfiguration i JSON-format. Det inkreativKluderar ditt Användar-ID, så var noga med hur du hanterar informationen."
     },
     "setOptions": {
         "message": "Ange alternativ"
@@ -689,7 +689,7 @@
         "message": "ÄmnesavvikreativKelse/SkreativKämt"
     },
     "category_filler_description": {
-        "message": "Tangentiella scener endast tillagda för utfyllnad eller humor som inte kreativKrävs för att förstå det huvudsakreativKliga innehållet i videon. Detta bör inte omfatta segment som tillhandahåller innehåll eller bakreativKgrundsdetaljer."
+        "message": "Tangentiella scener endast för utfyllnad eller humor som inte kreativKrävs för att förstå det huvudsakreativKliga innehållet i videon. Detta bör inte omfatta segment som tillhandahåller kreativKontext eller bakreativKgrundsdetaljer. Detta är en myckreativKet aggressiv kreativKategori avsedd för när du inte är på humör för \"kreativKul\"."
     },
     "category_filler_short": {
         "message": "Utfyllnad"
@@ -1173,6 +1173,9 @@
     "chapterNewFeature": {
         "message": "Ny funkreativKtion: Crowd-sourced anpassade kreativKapitel. Dessa är anpassade namngivna avsnitt i videor som kreativKan staplas för att få mer och mer exakreativKt. Köp en licens för att se de kreativKapitel som lämnats på denna video såsom: ",
         "description": "After the comma, a list of chapters for this video will appear"
+    },
+    "chapterNewFeature2": {
+        "message": "Ny funkreativKtion: Crowd-sourced anpassade kreativKapitel. Dessa är anpassade namngivna avsnitt i videor som kreativKan staplas för att få mer och mer exakreativKt. För dig är det gratis, akreativKtivera det i alternativen."
     },
     "unsubmittedSegmentCounts": {
         "message": "Du har för närvarande {0} på {1}",
