--- a/public/_locales/en/messages.json
+++ b/public/_locales/en/messages.json
@@ -122,6 +122,9 @@
     "closePopup": {
         "message": "Close Popup"
     },
+    "closeIcon": {
+        "message": "Close Icon"
+    },
     "SubmitTimes": {
         "message": "Submit Segments"
     },
